# aai_robotics

./: CMakeLists.txt  README.md  package.xml
config/: simulation_parametersMAISLEVE.yaml
launch/: rosi_control_1.launch  rosi_control_2.launch  rosi_control_3.launch  rosi_control_4.launch  rosi_tarefa_coleta_v1.launch  rosi_teleop.launch  rosi_teleop_v2.launch  v1_rosi_challenge.launch  v2_rosi_challenge.launch  v3_rosi_challenge.launch  v4_rosi_challenge.launch  v5_rosi_challenge.launch  v6_rosi_challenge.launch  v7_rosi_challenge.launch
scripts/: BKP_tarefa_v4.py  arms_control.py  arms_control2.py  arms_control3.py  campos_vetoriais_curva_fechada.py  controle_campos_potenciais.py  controle_circulo.py  controle_feedback_linearization.py  controle_feedback_linearization_lista_pontos.py  controle_vel6.py  fire_map.py  fire_show.py  fire_touch.py  get_pose_from_sensors.py  hokuyo_border_world_frame.py  hokuyo_control.py  hokuyo_nearest_point.py  kinect_depth_show.py  kinect_depth_try2.py  kinect_rgb_show.py  kinect_try1.py  kinect_try3.py  old_hokuyo_border_world_frame.py  old_hokuyo_test0.py  old_kinect_try1.py  primeira_tarefa_v1.py  subir_escada.py  tarefa1_v1.py  tarefa1_v2.py  tarefa1_v3.py  tarefa_v4.py  teleop_rosi.py  teste1.py  touch.py  ur5_control.py  vel_to_wheels.py  (+2 more)
v7_challenge_version/: CMakeLists.txt  README.md  package.xml
v7_challenge_version/launch/: rosi_control_4.launch  rosi_teleop.launch  v1_rosi_challenge.launch  v3_rosi_challenge.launch  v4_rosi_challenge.launch  v7_rosi_challenge.launch
v7_challenge_version/scripts/: tarefa1_v1.py
