<?xml version="1.0"?>
<package format="2">
  <name>aai_robotics</name>
  <version>0.0.0</version>
  <description>Pacote ROS para participacao no SBAI ROSI CHALLENGE</description>

  <maintainer email="arthurhdn7@hotmail.com">arthur</maintainer>

  <license>General Public License (GNU) v3.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosi_defy</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rosi_defy</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rosi_defy</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    
  </export>
</package>
